--- a/News App/Page/PostDetail/Cell/CommentTableViewCell.xib
+++ b/News App/Page/PostDetail/Cell/CommentTableViewCell.xib
@@ -9,29 +9,44 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="CommentTableViewCell" customModule="News_App" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="104" id="KGk-i7-Jjw" customClass="CommentTableViewCell" customModule="News_App" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="104"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="104"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7lD-S0-YfW">
-                        <rect key="frame" x="12" y="12" width="296" height="20"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
+                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="WYg-4g-gSz">
+                        <rect key="frame" x="12" y="12" width="296" height="80"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eCc-qU-qPZ">
+                                <rect key="frame" x="0.0" y="0.0" width="296" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7lD-S0-YfW">
+                                <rect key="frame" x="0.0" y="24.5" width="296" height="55.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                    </stackView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="7lD-S0-YfW" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="12" id="IuA-Ro-SHJ"/>
-                    <constraint firstItem="7lD-S0-YfW" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="12" id="kbX-vb-5dK"/>
-                    <constraint firstAttribute="trailing" secondItem="7lD-S0-YfW" secondAttribute="trailing" constant="12" id="man-Ar-HJM"/>
-                    <constraint firstAttribute="bottom" secondItem="7lD-S0-YfW" secondAttribute="bottom" constant="12" id="zvy-4H-E57"/>
+                    <constraint firstItem="WYg-4g-gSz" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="12" id="Dz4-5U-sRj"/>
+                    <constraint firstAttribute="bottom" secondItem="WYg-4g-gSz" secondAttribute="bottom" constant="12" id="E3T-fW-RrU"/>
+                    <constraint firstItem="WYg-4g-gSz" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="12" id="S38-0N-9cS"/>
+                    <constraint firstAttribute="trailing" secondItem="WYg-4g-gSz" secondAttribute="trailing" constant="12" id="bre-cT-gbk"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
-            <point key="canvasLocation" x="132" y="75"/>
+            <connections>
+                <outlet property="commentLabel" destination="7lD-S0-YfW" id="61Z-NJ-Hp6"/>
+                <outlet property="usernameLabel" destination="eCc-qU-qPZ" id="Khr-64-Ojc"/>
+            </connections>
+            <point key="canvasLocation" x="131.8840579710145" y="95.089285714285708"/>
         </tableViewCell>
     </objects>
 </document>
