--- a/News App/Page/AllPost/View/PostViewController.xib
+++ b/News App/Page/AllPost/View/PostViewController.xib
@@ -20,7 +20,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="eXc-fd-CGP">
-                    <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                    <rect key="frame" x="0.0" y="44" width="414" height="852"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                 </tableView>
             </subviews>
@@ -30,7 +30,7 @@
                 <constraint firstItem="eXc-fd-CGP" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="0BR-XY-PiD"/>
                 <constraint firstItem="eXc-fd-CGP" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="0hp-3K-Icb"/>
                 <constraint firstItem="eXc-fd-CGP" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="Blx-GD-pxV"/>
-                <constraint firstItem="eXc-fd-CGP" firstAttribute="bottom" secondItem="fnl-2z-Ty3" secondAttribute="bottom" id="e1b-SW-FxX"/>
+                <constraint firstAttribute="bottom" secondItem="eXc-fd-CGP" secondAttribute="bottom" id="HVs-7D-e3S"/>
             </constraints>
             <point key="canvasLocation" x="131.8840579710145" y="105.80357142857143"/>
         </view>
