--- a/News App/Page/AllPost/Cell/PostTableViewCell.xib
+++ b/News App/Page/AllPost/Cell/PostTableViewCell.xib
@@ -61,9 +61,22 @@
                             <constraint firstAttribute="bottom" secondItem="wrT-oP-g22" secondAttribute="bottom" id="vON-Bj-yAH"/>
                         </constraints>
                     </view>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5pt-mQ-99O">
+                        <rect key="frame" x="0.0" y="162" width="334" height="1"/>
+                        <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="1" id="Dme-bp-JAB"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
+                    <constraint firstAttribute="trailing" secondItem="5pt-mQ-99O" secondAttribute="trailing" id="4JM-zL-Oh5"/>
                     <constraint firstAttribute="bottom" secondItem="cpg-qd-868" secondAttribute="bottom" constant="16" id="H2o-TZ-ytS"/>
+                    <constraint firstItem="5pt-mQ-99O" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="SuH-9F-1rv"/>
+                    <constraint firstAttribute="bottom" secondItem="5pt-mQ-99O" secondAttribute="bottom" id="dUH-Sv-WDx"/>
                     <constraint firstItem="cpg-qd-868" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="fyy-sk-0o6"/>
                     <constraint firstAttribute="trailing" secondItem="cpg-qd-868" secondAttribute="trailing" constant="16" id="ht3-L9-mfs"/>
                     <constraint firstItem="cpg-qd-868" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="lgZ-of-nOb"/>
