--- a/News App/Page/AllPost/Cell/PostTableViewCell.xib
+++ b/News App/Page/AllPost/Cell/PostTableViewCell.xib
@@ -21,13 +21,13 @@
                         <rect key="frame" x="16" y="16" width="302" height="131"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="usernamefdafsdfa dsf" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wrT-oP-g22">
-                                <rect key="frame" x="0.0" y="41" width="180" height="90"/>
+                                <rect key="frame" x="0.0" y="49" width="180" height="82"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
-                                <nil key="textColor"/>
+                                <color key="textColor" systemColor="systemBlueColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="- company" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cmE-Ug-FhX">
-                                <rect key="frame" x="180" y="75.5" width="122" height="21"/>
+                                <rect key="frame" x="180" y="79.5" width="122" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -47,7 +47,6 @@
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="wrT-oP-g22" firstAttribute="top" secondItem="GVj-cr-kZq" secondAttribute="bottom" id="5tQ-ya-kkz"/>
                             <constraint firstItem="GVj-cr-kZq" firstAttribute="top" secondItem="BeY-2s-CIM" secondAttribute="bottom" id="ABw-zC-ASY"/>
                             <constraint firstItem="BeY-2s-CIM" firstAttribute="top" secondItem="cpg-qd-868" secondAttribute="top" id="C6C-8H-HGN"/>
                             <constraint firstAttribute="trailing" secondItem="BeY-2s-CIM" secondAttribute="trailing" id="Hi2-0O-vYn"/>
@@ -58,6 +57,7 @@
                             <constraint firstItem="wrT-oP-g22" firstAttribute="leading" secondItem="cpg-qd-868" secondAttribute="leading" id="jDP-nl-9ZQ"/>
                             <constraint firstAttribute="trailing" secondItem="cmE-Ug-FhX" secondAttribute="trailing" id="lMs-j6-5Ok"/>
                             <constraint firstAttribute="trailing" secondItem="GVj-cr-kZq" secondAttribute="trailing" id="nqF-Mo-bwf"/>
+                            <constraint firstItem="wrT-oP-g22" firstAttribute="top" secondItem="GVj-cr-kZq" secondAttribute="bottom" constant="8" id="opN-iG-dGX"/>
                             <constraint firstAttribute="bottom" secondItem="wrT-oP-g22" secondAttribute="bottom" id="vON-Bj-yAH"/>
                         </constraints>
                     </view>
@@ -95,6 +95,9 @@
     <resources>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemBlueColor">
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
